# elasticmagic

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  MANIFEST.in  PRERELEASE_TODO.rst  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_async.txt  requirements_async_test.txt  requirements_doc.txt  requirements_geo.txt  requirements_lint.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini  vagga.yaml
.github/: gh-tox-envs.py
.github/workflows/: python.yaml
benchmark/: README.rst  bench.py  run.py
docs/: Makefile  aggregations.rst  conf.py  index.rst  make.bat  quick_start.rst  search_api.rst
elasticmagic/: __init__.py  actions.py  agg.py  api.py  attribute.py  cluster.py  collections.py  compat.py  compiler.py  datastructures.py  document.py  expression.py  function.py  helpers.py  index.py  processor.py  queryfilter.py  result.py  search.py  types.py  types.py.rej  util.py  version.py
elasticmagic/ext/asyncio/: __init__.py  cluster.py  index.py  search.py
elasticmagic/ext/asyncio/pagination/: __init__.py  flask.py
elasticmagic/ext/pagination/: __init__.py  flask.py
elasticmagic/ext/queryfilter/: __init__.py  codec.py  histogram.py  queryfilter.py
requirements/: test.txt
scripts/: wait_es.sh
tests/: base.py  conftest.py  fixtures.py  test_actions.py  test_agg.py  test_cluster.py  test_codec.py  test_document.py  test_expression.py  test_function.py  test_index.py  test_pagination.py  test_parent_child.py  test_parent_child_relation.py  test_query.py  test_queryfilter.py  test_result.py  test_script.py  test_search.py  test_types.py  test_utils.py  util.py
tests/integ/asyncio/: test_indexing.py
tests_integ/: conftest.py  test_indexing.py
tests_integ/asyncio/: conftest.py  test_bulk.py  test_index.py  test_pagination.py  test_parent_child.py  test_search.py
tests_integ/general/: conftest.py  test_indexing.py
